--- a/src/main/res/layout/main.xml
+++ b/src/main/res/layout/main.xml
@@ -1,26 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:orientation="vertical">
 
-<!-- <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" -->
-<!--        android:layout_width="wrap_content" -->
-<!--        android:layout_height="wrap_content"> -->
-
-<!--   <TextView xmlns:android="http://schemas.android.com/apk/res/android" -->
-<!--             android:id="@+id/textview" -->
-<!--             android:layout_width="wrap_content" -->
-<!--             android:layout_height="wrap_content"/> -->
-<!-- </LinearLayout> -->
-
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-  <TextView
-      android:id="@+id/textview"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_centerHorizontal="true"
-      android:layout_centerVertical="true"
-      android:text="@string/hello_lucy"/>
-</RelativeLayout>
+	<Button
+		android:id="@+id/button1"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="@string/button_i_want"/>
+</LinearLayout>
