--- a/src/main/res/layout/main.xml
+++ b/src/main/res/layout/main.xml
@@ -1,11 +1,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:orientation="vertical">
+	android:orientation="horizontal">
 
 	<Button
 		android:id="@+id/button1"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:text="@string/button_i_want"/>
+        <Button
+		android:id="@+id/button1"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="@string/button_to_watch"/>
+        <Button
+		android:id="@+id/button1"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="@string/button_Olivia"/>
 </LinearLayout>
