--- a/src/main/res/layout/main.xml
+++ b/src/main/res/layout/main.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
@@ -7,15 +8,18 @@
 		android:id="@+id/button1"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="@string/button_i_want"/>
+		android:text="@string/button_i_want"
+                android:textAppearance="?android:attr/textAppearanceLarge"/>
         <Button
 		android:id="@+id/button2"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="@string/button_to_watch"/>
+		android:text="@string/button_to_watch"
+                android:textAppearance="?android:attr/textAppearanceLarge"/>/>
         <Button
 		android:id="@+id/button3"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="@string/button_Olivia"/>
+		android:text="@string/button_Olivia"
+                android:textAppearance="?android:attr/textAppearanceLarge"/>/>
 </LinearLayout>
